--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "license" : "SEE LICENSE IN LICENSE.txt",
   "private" : false,
   "dependencies" : {
-    "@elastic/eui" : "41.2.0"
+    "@elastic/eui" : "41.2.0",
+    "@elastic/datemath" : "^5.0.3",
+    "classnames" : "^2.2.6",
+    "moment" : "^2.27.0",
+    "prop-types" : "^15.6.0",
+    "typescript" : "4.0.5"
   }
 }
