--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "eui-cljs",
-  "version": "41.1.0",
-  "description": "Auto generated wrapper around EUI files",
-  "author": "Ryan Haywood",
-  "license": "SEE LICENSE IN LICENSE.txt",
-  "private": false,
-  "dependencies": {
-    "@elastic/eui": "41.1.0"
+  "name" : "eui-cljs",
+  "version" : "41.2.0",
+  "description" : "Auto generated wrapper around EUI files",
+  "author" : "Ryan Haywood",
+  "license" : "SEE LICENSE IN LICENSE.txt",
+  "private" : false,
+  "dependencies" : {
+    "@elastic/eui" : "41.2.0",
+    "@elastic/datemath" : "^5.0.3",
+    "classnames" : "^2.2.6",
+    "moment" : "^2.27.0",
+    "prop-types" : "^15.6.0",
+    "typescript" : "4.0.5"
   }
 }
