--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,7 @@
 {
-  "extends": [
-    "config:base"
-  ]
+    "packageRules": [
+        {
+            "matchPackageNames": ["@elastic/eui"]
+        }
+    ]
 }
