--- a/examples/sample-app/package.json
+++ b/examples/sample-app/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@elastic/datemath": "^5.0.3",
-    "@elastic/eui": "41.0.0",
+    "@elastic/eui": "41.2.0",
     "classnames": "^2.2.6",
     "moment": "^2.27.0",
     "prop-types": "^15.6.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "typescript": "4.0.5"
   }
 }
