fix: Update sample app eui version to 64.0.0
Page content was deprecated in favor of a general purpose page template,
or page section [1].
Added peerDependencies as required in the version 64.0.0 [2].
Fixes elastic/eui-cljs#38

[1]: https://github.com/elastic/eui/pull/6194
[2]: https://github.com/elastic/eui/blob/v64.0.0/wiki/consuming.md#installation

--- a/examples/sample-app/package.json
+++ b/examples/sample-app/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@elastic/datemath": "^5.0.3",
-    "@elastic/eui": "41.2.0",
+    "@elastic/eui": "64.0.0",
+    "@emotion/cache": "^11.10.5",
+    "@emotion/react": "^11.10.5",
     "classnames": "^2.2.6",
     "moment": "^2.27.0",
     "prop-types": "^15.6.0",
